objects/Fit_To_Lend_Checklist__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Comments__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Status_Change_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipName>Fit_to_Lend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notification_emails_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication if emails were sent to Notification Groups and/or Participants.</description>
        <label>Notification emails sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Checklist_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Checklist Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fit To Lend Checklist</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Fit to Lend No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fit To Lend Checklists</pluralLabel>
    <recordTypes>
        <fullName>Fit_To_Lend_Checklist</fullName>
        <active>true</active>
        <label>Fit To Lend Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_To_Lend_Checklist_Cancelled</fullName>
        <active>true</active>
        <description>Used for Cancelled Fit to Lends so that Users cannot modify existing data on them</description>
        <label>Fit To Lend Checklist - Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_To_Lend_Checklist_Reviewed</fullName>
        <active>true</active>
        <label>Fit To Lend Checklist - Reviewed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>